--- a/src/components/home/Cart.css
+++ b/src/components/home/Cart.css
@@ -3,6 +3,8 @@
     max-width: 800px;
     margin: 0 auto;
     padding: 40px;
+    height: 100vh;
+    margin-top: 10vh;
     text-align: center;
   }
   
@@ -18,7 +20,7 @@
   
   .cart-page .cart-item {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     border-bottom: 1px solid #ccc;
     padding: 20px 0;
