--- a/src/components/home/Navbar.css
+++ b/src/components/home/Navbar.css
@@ -1,16 +1,18 @@
 .navbar {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    background-color: #fff;
+    width: 100%;
+    position: fixed;
+     background-color: #fff;
     padding: 1rem;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25); */
   }
   
   .links {
-    display: flex;
+    /* display: flex; */
     gap: 1rem;
-    background-color: aqua;
+    /* background-color: aqua; */
     padding: 10px;
     
   }
