--- a/src/components/userlogin/SignUp.css
+++ b/src/components/userlogin/SignUp.css
@@ -1,32 +1,101 @@
-.form-group {
-    margin-bottom: 1rem;
-  }
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Josefin+Sans&family=Roboto:ital@1&display=swap");
+
+.container {
+  font-family: Inter;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  min-height: 100vh;
+}
+.from-ui {
+  background-color: #fff;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+  padding: 10px 50px;
+  width: 450px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 10px;
+  gap: 10px;
+  font-family: Inter;
+  border-radius: 10px;
+}
+form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   
-  label {
-    font-weight: bold;
-  }
-  .container{
-    border: 1px solid black;
-    margin: 10px;
-    padding: 20px;
-  }
-  input {
-    width: 50%;
-    padding: 0.5rem;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    font-size: 1rem;
-    margin-top: 0.5rem;
-  }
-  
-  button {
-    margin-top: 1rem;
-    border-radius: 5px;
-    background-color: aquamarine;
-  }
-  
-  .forgot-password {
-    cursor: pointer;
-    color: blue;
-  }
-  
+  flex-wrap: wrap;
+  padding: 10px;
+  gap: 10px;
+}
+form div {
+  flex-basis: 100%;
+  padding: 15px 0px;
+  width: 100%;
+  position: relative;
+}
+form .name,
+form .mobile {
+  flex-basis: 40%;
+}
+form .email,
+form .gender {
+  flex-basis: 40%;
+}
+
+input {
+  border: none;
+  border-bottom: 2px solid #7c7c7c;
+  width: 100%;
+  padding-left: 0px;
+  padding-bottom: 10px;
+}
+.gender {
+  border: none;
+  border-bottom: 2px solid #7c7c7c;
+  width: 100%;
+  padding: 5px;
+}
+
+input:focus {
+  outline: none;
+  /* Additional styling if needed */
+}
+
+.btn {
+  margin: 20px;
+  padding: 8px;
+  border-radius: 40px;
+  color: white;
+  width: 160px;
+  font-size: 10px;
+  background: linear-gradient(to right, #2c86d9, #323232);
+  margin-left: 150px;
+}
+.heading {
+  color: #3e3e3e;
+  word-spacing: 0.5em;
+  font-size: 25px;
+}
+span {
+  font-size: smaller;
+  color: red;
+}
+input::placeholder {
+  font-size: 14px;
+}
+#gender {
+  border: none;
+  color: #7c7c7c;
+}
+#gender:focus {
+  outline: none;
+  /* Additional styling if needed */
+}
+.forgot-password{
+  color: royalblue;
+  text-decoration: underline;
+}
